# healthcare-data-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.jupyter  GEMINI.md  Makefile  README.md  SCRIPTS_AND_TOOLS_SUMMARY.md  activate_venv.bat  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.md  run_dashboard.bat  run_dashboard.py  run_dashboard_venv.py  test_imports.py  test_model_loading.py  test_model_predictions.py
data/: DATA_HOSTING_GUIDE.md  DATA_INVENTORY.md  DATA_SETUP.md  SYNC_SUMMARY.md
docs/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DOCKER_OPTIMIZATION.md  FINAL_PROJECT_SUMMARY.md  IMPROVED_FIGURES_SUMMARY.md  PHASE_2A_IMPLEMENTATION.md  PHASE_2B_IMPLEMENTATION.md  PHASE_3_DEPLOYMENT_GUIDE.md  PHASE_3_README.md  PROJECT_REPORT.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  deliverable.md  dissertation_figures_summary.md  impact_summary.md  implementation_guide.md  project_summary.md  table_4_1_healthcare_features.md
docs/guides/: installation.md  quickstart.md
grafana/dashboards/: main.json
models/: phase_2a_test_results.json  phase_2b_results_latest.json
monitoring/: alertmanager.yml  filebeat.yml
nginx/: nginx.conf
notebooks/: 01_data_exploration.ipynb
prometheus/: prometheus.yml
reports/: ml_execution_report.json  production_report.json  rl_system_execution_report.json  rl_system_summary.json
scripts/: download_data.py  fix_performance_dashboard_improved.py  generate_dissertation_figures.py  generate_load.py  generate_table_4_1_improved.py  ml_model_execution.py  phase_2a_execution.py  phase_2b_execution.py  pipeline_demo.py  production_check.py  production_phase3_test.py  quick_phase_2a.py  rl_system_execution.py  rl_system_execution_simple.py  run_all.py  setup_environment.bat  setup_environment.py  start_phase3.py  test_phase3_api.py  test_phase_2a.py  test_phase_2b.py  test_real_data_integration.py  validate_data.py  verify_setup.py
src/: __init__.py  main.py
src/api/: __init__.py  dashboard.py  main.py
src/api/models/: __init__.py  requests.py  responses.py  schemas.py
src/api/routers/: __init__.py  health.py  monitoring.py  optimization.py  predictions.py
src/config/: __init__.py  settings.py
src/data_pipeline/: __init__.py  etl.py  storage.py
src/models/: __init__.py  advanced_models.py  baseline_models.py  feature_engineering.py  model_evaluation.py  ppo_agent.py  rl_environment.py  rl_integration.py
src/utils/: __init__.py  logging.py  metrics_tracker.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_data_pipeline.py
tests/unit/: __init__.py  test_data_validation.py
