[tool.poetry]
name = "healthcare-pipeline"
version = "0.1.0"
description = "Healthcare data science pipeline"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }  # Update with your preferred license
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"  # Use Python 3.11 to avoid medspacy's spacy>=3.8 requirement
pandas = ">=2.1.0"
numpy = ">=1.24.0"
scipy = ">=1.11.0"
scikit-learn = ">=1.3.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
plotly = ">=5.15.0"
bokeh = ">=3.2.0"
sqlalchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.0"
pymongo = ">=4.5.0"
redis = ">=4.6.0"
dask = ">=2023.8.0"
pyarrow = ">=13.0.0"
parquet = ">=1.3.1"
influxdb-client = ">=1.38.0"
tables = ">=3.8.0"
torch = ">=2.0.0"
transformers = ">=4.33.0"
xgboost = ">=1.7.0"
lightgbm = ">=4.0.0"
gym = ">=0.26.0"
gymnasium = "*"
stable-baselines3 = ">=2.1.0"
ray = { version = ">=2.7.0", extras = ["rllib"] }
nltk = ">=3.8.0"
spacy = ">=3.7.0,<3.8.0"  # Pin to match scispacy==0.5.5
scispacy = "0.5.5"
medspacy = "1.1.0"  # Downgrade to a version compatible with spacy<3.8
fastapi = ">=0.103.0"
uvicorn = ">=0.23.0"
requests = ">=2.31.0"
pydantic = ">=2.3.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.0"
click = ">=8.1.0"
rich = ">=13.5.0"
boto3 = ">=1.28.0"
azure-storage-blob = ">=12.17.0"
google-cloud-storage = ">=2.10.0"
docker = ">=6.1.0"
prometheus-client = ">=0.17.0"
structlog = ">=23.1.0"
sentry-sdk = ">=1.30.0"
cryptography = ">=41.0.0"
pyjwt = ">=2.8.0"
bcrypt = ">=4.0.0"
statsmodels = ">=0.14.0"
numba = ">=0.57.0"
joblib = ">=1.3.0"
cython = ">=3.0.0"
holidays = ">=0.34"
faker = ">=19.6.0"
tqdm = ">=4.66.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry"